# umcu_pilot

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
config/: .locations.yaml.swp  locations.yaml
docs/diagrams/: sermas_pilot.drawio
include/mul_pilot/: sermas_pilot.h
include/sermas_pilot/: sermas_pilot.h
include/umcu_pilot/: umcu_pilot.h
launch/: sermas_pilot.launch  umcu_pilot.launch
src/: sermas_pilot.cpp  sermas_pilot_node.cpp  umcu_pilot.cpp  umcu_pilot_node.cpp
