<?xml version="1.0"?>
<package format="2">
  <name>sermas_pilot</name>
  <version>0.1.0</version>
  <description>The sermas_pilot package, based on RComponent structure. </description>

  <maintainer email="vsolaz@robotnik.es">Víctor Solaz</maintainer>

  <author email="vsolaz@robotnik.es">Víctor Solaz</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>actionlib</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>odin_msgs</build_depend>
  <build_depend>robotnik_msgs</build_depend>
  <build_depend>rcomponent</build_depend>
  <build_depend>robot_simple_command_manager_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>

  <build_export_depend>roscpp</build_export_depend>

  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>odin_msgs</exec_depend>
  <exec_depend>robotnik_msgs</exec_depend>
  <exec_depend>rcomponent</exec_depend>
  <exec_depend>robot_simple_command_manager_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <export>

  </export>
</package>
